--- a/src/styles.css
+++ b/src/styles.css
@@ -9,18 +9,79 @@
 
 }
 
+:root{
+    --dark-orange: #fa7914;
+    --light-orange: #ffb316;
+    --yellow: #fffc04;
+    --red: #cb3400;
+    --brown: #651f0c;
+    --dark-brown: #360c0a;
+    --content-flex-gap: .5em;
+    --font-size: 20px;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+button{
+    appearance: none;
+    font: inherit;
+    font-family: "optifrenchscript";
+    font-size: 2em;
+    padding: 0.1em 0.5em;
+    background-color: var(--light-orange);
+    color: #360c0a;
+    border: 2px solid var(--dark-brown);
+    border-radius: 3px;
+}
+
+button:hover{
+    box-shadow: inset 0 0 10px var(--red);
+}
+
+button:active{
+    background-color: var(--yellow);
+}
+
 body{
     font-family: "Montserrat", sans-serif;
-    font-size: 20px;
+    font-size: var(--font-size);
+    background-color: var(--brown);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1{
     font-family: "optifrenchscript";
     font-size: 4em;
+}
+
+nav{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: var(--content-flex-gap);
+    background-color: var(--dark-orange);
+    color: var(--dark-brown);
+    padding: 1em;
+}
+
+#content{
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: var(--content-flex-gap);
+    margin-top: 3em;
+    background-color: var(--dark-orange);
+    color: var(--dark-brown);
+    padding: 1em 2em;
+    border-radius: 5px;
 }
