--- a/src/styles.css
+++ b/src/styles.css
@@ -79,7 +79,7 @@ nav{
     justify-content: center;
     align-items: center;
     gap: var(--content-flex-gap);
-    margin-top: 3em;
+    margin: 3rem;
     background-color: var(--dark-orange);
     color: var(--dark-brown);
     padding: 1em 2em;
@@ -88,13 +88,13 @@ nav{
 
 .menu{
     font-family: "optifrenchscript";
-    font-size: 2em;
-    margin-bottom: 1em;
+    font-size: 2rem;
+    margin-bottom: 1rem;
     > h2{
-        margin-bottom: 1em;
+        margin-bottom: 1rem;
     }
     > p + h3{
-        margin-top: 1em;
+        margin-top: 1rem;
     }
     >p::before{
         content: "- ";
